--- a/src/CommonStyles.css
+++ b/src/CommonStyles.css
@@ -1,8 +1,8 @@
 /* src/CommonStyles.css */
 .back-button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background: #007bff;
+  margin-top: 2px;
+  padding: 0px;
+  background: #4a4a4a;
   color: white;
   border: none;
   border-radius: 5px;
