--- a/src/Page/TopPage.css
+++ b/src/Page/TopPage.css
@@ -28,14 +28,14 @@ body {
     padding: 20px;
   }
   
-  .action-buttons {
+  .action-buttons1 {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
   }
   
-  .action-button {
+  .action-button1 {
     flex: 1;
     padding: 15px;
     margin: 20 10px;
