--- a/src/RecipientList.css
+++ b/src/RecipientList.css
@@ -22,6 +22,7 @@
 }
 
 .action-buttons {
+  width:80%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -84,7 +85,23 @@ input[type="number"], textarea {
   padding: 5px 10px;
   cursor: pointer;
 }
+.search-bar {
+  display: flex;
+  justify-content: center;
+  padding: 10px 15px;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #ffffff; /* 検索バーの背景色を白に設定 */
+}
 
+.search-input {
+  width: 90%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
 /* メディアクエリを追加して、大きな画面での最大幅を制限 */
 @media (min-width: 600px) {
   .request-container {
